{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 167,
  "lineage": "02e74597-7922-4789-d7c0-0d6581bb0959",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:877817966050:security-group/sg-0926873744fb8cfc4",
            "description": "Security group for EKS control plane",
            "egress": [],
            "id": "sg-0926873744fb8cfc4",
            "ingress": [],
            "name": "depi-graduation-eks-control-plane-sg",
            "name_prefix": "",
            "owner_id": "877817966050",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "depi-graduation-eks-control-plane-sg"
            },
            "tags_all": {
              "Name": "depi-graduation-eks-control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08078a70101f3831d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877817966050",
            "id": "sg-0926873744fb8cfc4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:877817966050:internet-gateway/igw-07782b418bc7f387b",
            "id": "igw-07782b418bc7f387b",
            "owner_id": "877817966050",
            "region": "us-west-2",
            "tags": {
              "Name": "depi-graduation-igw"
            },
            "tags_all": {
              "Name": "depi-graduation-igw"
            },
            "vpc_id": "vpc-08078a70101f3831d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:877817966050:route-table/rtb-05f033b457e5931be",
            "id": "rtb-05f033b457e5931be",
            "owner_id": "877817966050",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07782b418bc7f387b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "depi-graduation-public-rt"
            },
            "tags_all": {
              "Name": "depi-graduation-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08078a70101f3831d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877817966050",
            "id": "rtb-05f033b457e5931be",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea1f657cc3e8c1f",
            "region": "us-west-2",
            "route_table_id": "rtb-05f033b457e5931be",
            "subnet_id": "subnet-0a1be2503369d060c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8ed99fdda0fa989",
            "region": "us-west-2",
            "route_table_id": "rtb-05f033b457e5931be",
            "subnet_id": "subnet-085715d63d9db2365"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:877817966050:subnet/subnet-0a1be2503369d060c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1be2503369d060c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877817966050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "depi-graduation-public-0"
            },
            "tags_all": {
              "Name": "depi-graduation-public-0"
            },
            "vpc_id": "vpc-08078a70101f3831d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877817966050",
            "id": "subnet-0a1be2503369d060c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:877817966050:subnet/subnet-085715d63d9db2365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085715d63d9db2365",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "877817966050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "depi-graduation-public-1"
            },
            "tags_all": {
              "Name": "depi-graduation-public-1"
            },
            "vpc_id": "vpc-08078a70101f3831d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877817966050",
            "id": "subnet-085715d63d9db2365",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:877817966050:vpc/vpc-08078a70101f3831d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df20e1c5787bb64d",
            "default_route_table_id": "rtb-01726b1dad3ba2a29",
            "default_security_group_id": "sg-0157688a5c5711de2",
            "dhcp_options_id": "dopt-0663d71a9e5714aff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08078a70101f3831d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01726b1dad3ba2a29",
            "owner_id": "877817966050",
            "region": "us-west-2",
            "tags": {
              "Name": "depi-graduation-vpc"
            },
            "tags_all": {
              "Name": "depi-graduation-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877817966050",
            "id": "vpc-08078a70101f3831d",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}